build(djlint): install, config and setup djlint

--- a/src/app/templates/app/index.html
+++ b/src/app/templates/app/index.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block content %}
-  <header>
-    <h2>INDEX</h2>
-  </header>
-  <section>
-    This is the index page.
-  </section>
+    <header>
+        <h2>INDEX</h2>
+    </header>
+    <section>
+        This is the index page.
+    </section>
 {% endblock content %}
